cleanup, removed amp-consent except index

--- a/austin-music-article.html
+++ b/austin-music-article.html
@@ -6,11 +6,10 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="Your Weekend Guide to RippleFest Texas (Sept 18-21) - Minnow News">
+  <meta name="description" content="Your Weekend Guide to RippleFest Texas (Sept 18-21) - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/austin-music-article.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -90,6 +89,7 @@
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -97,8 +97,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -106,9 +107,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -116,75 +119,73 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
-        margin-top: 2rem;
+      color: #333;
+      margin-top: 2rem;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     .event-list {
-        list-style-type: none;
-        padding-left: 0;
+      list-style-type: none;
+      padding-left: 0;
     }
+
     .event-list li {
-        margin-bottom: 1rem;
-        padding: 1rem;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        background-color: #fafafa;
+      margin-bottom: 1rem;
+      padding: 1rem;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      background-color: #fafafa;
     }
+
     .event-list strong {
-        color: #0053B3;
+      color: #0053B3;
     }
   </style>
 </head>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -206,7 +207,9 @@
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
   <header class="header">
-    <a href="index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -216,27 +219,40 @@
   </header>
   <main>
     <article>
-        <h2>Austin's Vibe All Weekend: Your Guide to RippleFest Texas!</h2>
+      <h2>Austin's Vibe All Weekend: Your Guide to RippleFest Texas!</h2>
 
-        <p>Heads up, Austin music lovers! While the week's one-off shows have wrapped up, the main event is just getting started. RippleFest Texas is taking over The Far Out Lounge & Stage all weekend long, from Thursday, September 18th, through Sunday, the 21st. If you're looking for the epicenter of the city's rock scene, this is it.</p>
+      <p>Heads up, Austin music lovers! While the week's one-off shows have wrapped up, the main event is just getting
+        started. RippleFest Texas is taking over The Far Out Lounge & Stage all weekend long, from Thursday, September
+        18th, through Sunday, the 21st. If you're looking for the epicenter of the city's rock scene, this is it.</p>
 
-        <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" alt="Vibrant Austin music scene" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
+      <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" alt="Vibrant Austin music scene"
+        class="article-image" width="1024" height="683" layout="responsive"></amp-img>
 
-        <h3>The Main Event: A Weekend of Heavy Rock</h3>
-        <p>RippleFest is a sonic explosion of heavy rock, stoner metal, and psychedelic grooves. This multi-day festival has curated a massive lineup of genre titans, making it a can't-miss event for anyone who loves loud guitars and powerful riffs.</p>
+      <h3>The Main Event: A Weekend of Heavy Rock</h3>
+      <p>RippleFest is a sonic explosion of heavy rock, stoner metal, and psychedelic grooves. This multi-day festival
+        has curated a massive lineup of genre titans, making it a can't-miss event for anyone who loves loud guitars and
+        powerful riffs.</p>
 
-        <h3>Who to See</h3>
-        <p>The lineup is stacked from top to bottom. Some of the heavy hitters you can catch throughout the weekend include:</p>
-        <ul class="event-list">
-            <li><strong>Weedeater:</strong> The legendary sludge metal band from North Carolina is sure to deliver a crushing set.</li>
-            <li><strong>Whores:</strong> This Atlanta-based noise rock trio is known for their intense and chaotic live shows.</li>
-            <li><strong>Mothership:</strong> Hailing from Dallas, this band brings a supersonic brew of classic rock and heavy metal.</li>
-            <li><strong>ASG:</strong> A long-running favorite in the stoner rock scene, ASG's sets are always a high-energy affair.</li>
-            <li><strong>Mondo Generator:</strong> The brainchild of former Kyuss and Queens of the Stone Age bassist Nick Oliveri, this band is a force of nature.</li>
-        </ul>
-        <p>And that's just a small sample. With dozens of bands playing across multiple stages, there's always something new to discover.</p>
+      <h3>Who to See</h3>
+      <p>The lineup is stacked from top to bottom. Some of the heavy hitters you can catch throughout the weekend
+        include:</p>
+      <ul class="event-list">
+        <li><strong>Weedeater:</strong> The legendary sludge metal band from North Carolina is sure to deliver a
+          crushing set.</li>
+        <li><strong>Whores:</strong> This Atlanta-based noise rock trio is known for their intense and chaotic live
+          shows.</li>
+        <li><strong>Mothership:</strong> Hailing from Dallas, this band brings a supersonic brew of classic rock and
+          heavy metal.</li>
+        <li><strong>ASG:</strong> A long-running favorite in the stoner rock scene, ASG's sets are always a high-energy
+          affair.</li>
+        <li><strong>Mondo Generator:</strong> The brainchild of former Kyuss and Queens of the Stone Age bassist Nick
+          Oliveri, this band is a force of nature.</li>
+      </ul>
+      <p>And that's just a small sample. With dozens of bands playing across multiple stages, there's always something
+        new to discover.</p>
 
-        <p>If you're looking for your live music fix this weekend, The Far Out Lounge & Stage is the place to be. Get out there and support this incredible festival!</p>
+      <p>If you're looking for your live music fix this weekend, The Far Out Lounge & Stage is the place to be. Get out
+        there and support this incredible festival!</p>
     </article>
   </main>
 </body>
