--- a/austin_articles/03_music_venues.html
+++ b/austin_articles/03_music_venues.html
@@ -6,11 +6,10 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="Austin's Music Venues: A Guide from Arenas to Dive Bars - Minnow News">
+  <meta name="description" content="Austin's Music Venues: A Guide from Arenas to Dive Bars - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/austin_articles/03_music_venues.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -84,20 +83,7 @@
   </noscript>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -120,7 +106,9 @@
     data-credentials="include"></amp-analytics>
 
   <header class="header">
-    <a href="../index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="../index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="../index.html">Home</a>
       <a href="../about.html">About</a>
@@ -130,82 +118,136 @@
   </header>
   <main>
     <article>
-<h2>Austin's Music Venues: A Guide from Arenas to Dive Bars</h2>
-<amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
-<p>Austin's title as the "Live Music Capital of the World" isn't just a slogan; it's a way of life. The city is home to a staggering number of venues, each with its own unique history, sound, and personality. From massive, state-of-the-art arenas to tiny, historic dive bars, there's a stage for every sound and a vibe for every fan. Here’s a guide to 15 essential venues that make up the fabric of Austin's music scene.</p>
-<h2>The Big Stages: Arenas &amp; Amphitheaters</h2>
-<p>These are the venues that host the biggest names in music. They offer large-scale production and a chance to see global superstars.</p>
-<ol>
-<li><strong>Moody Center</strong><ul>
-<li><strong>Vibe:</strong> State-of-the-art and massive. This 15,000+ capacity arena on the UT campus is Austin's newest and biggest indoor venue. It's a premium, modern experience with perfect sound, designed for the largest touring pop, rock, and country acts.</li>
-</ul>
-</li>
-<li><strong>Germania Insurance Amphitheater</strong><ul>
-<li><strong>Vibe:</strong> A classic, sprawling outdoor concert experience. Located at the Circuit of the Americas (COTA), this 14,000-capacity amphitheater is the spot for huge summer tours. The vibe is festival-like, with a mix of reserved seats and a large lawn for spreading out under the stars.</li>
-</ul>
-</li>
-<li><strong>Stubb's Waller Creek Amphitheater</strong><ul>
-<li><strong>Vibe:</strong> An iconic Austin night out. This beloved 2,200-capacity outdoor amphitheater is attached to the legendary Stubb's BBQ. Located in the Red River Cultural District, it hosts a wide range of popular indie, alternative, and hip-hop acts. The atmosphere is always energetic and fun.</li>
-</ul>
-</li>
-<li><strong>ACL Live at The Moody Theater</strong><ul>
-<li><strong>Vibe:</strong> Pristine, intimate, and iconic. Home to the tapings of the "Austin City Limits" TV show, this 2,750-capacity theater is an acoustically perfect space. Despite its size, it feels incredibly intimate. It's a "grown-up" concert experience, perfect for legendary performers and attentive audiences.</li>
-</ul>
-</li>
-</ol>
-<h2>The Sweet Spot: Medium-Sized Clubs &amp; Theaters</h2>
-<p>These venues are the heart and soul of Austin's music scene, offering a chance to see established acts and rising stars in a more intimate setting.</p>
-<ol>
-<li><strong>The Continental Club</strong><ul>
-<li><strong>Vibe:</strong> Effortlessly cool and historic. This legendary South Congress club (capacity ~175) has been hosting roots, rockabilly, and country since 1955. It’s a long, narrow, no-frills room where the music is everything. An absolute must-visit.</li>
-</ul>
-</li>
-<li><strong>Antone's Nightclub</strong><ul>
-<li><strong>Vibe:</strong> The "Home of the Blues." A downtown institution (capacity ~400) that helped launch Stevie Ray Vaughan. The atmosphere is reverent, with walls covered in photos of blues legends. It's a historic space dedicated to preserving the blues tradition.</li>
-</ul>
-</li>
-<li><strong>The Mohawk</strong><ul>
-<li><strong>Vibe:</strong> A quintessential Austin rock club. With its multi-level outdoor stage and an intimate indoor room (total capacity ~900), the Mohawk is a Red River staple. The vibe is a bit gritty and always ready to rock, perfect for indie, punk, and metal shows.</li>
-</ul>
-</li>
-<li><strong>The Parish</strong><ul>
-<li><strong>Vibe:</strong> An intimate music lover's haven. Located on Sixth Street, this 450-capacity room is known for its incredible sound system. It's a great place to see a touring band you love up close, with a vibe that's squarely focused on the performance.</li>
-</ul>
-</li>
-<li><strong>Emo's</strong><ul>
-<li><strong>Vibe:</strong> Loud, energetic, and raw. While its new East Riverside location (capacity ~1,250) is more polished than the original punk-rock dive, Emo's still carries the torch for high-energy alternative, rock, and hip-hop shows.</li>
-</ul>
-</li>
-<li><strong>Scoot Inn</strong><ul>
-<li><strong>Vibe:</strong> Historic and rustic. As one of Texas's oldest bars (est. 1871), this East Austin landmark (capacity ~800) has a relaxed, neighborhood feel. The large outdoor stage hosts a variety of genres, making it a comfortable and classic spot to catch a show.</li>
-</ul>
-</li>
-</ol>
-<h2>The Up-Close Experience: Small &amp; Intimate Venues</h2>
-<p>These are the places where you can be just a few feet from the performers, experiencing music in its most raw and immediate form.</p>
-<ol>
-<li><strong>The Elephant Room</strong><ul>
-<li><strong>Vibe:</strong> A genuine underground jazz club. Located in a downtown basement, this small (under 100 capacity), dark, and intimate club is all about the music. The audience is there to listen, making it a perfect, no-frills spot for jazz lovers.</li>
-</ul>
-</li>
-<li><strong>The Saxon Pub</strong><ul>
-<li><strong>Vibe:</strong> A respected listening room. This South Lamar pub (capacity ~150) is a haven for singer-songwriters. The atmosphere is warm and cozy, designed for paying close attention to the craft of songwriting.</li>
-</ul>
-</li>
-<li><strong>The White Horse</strong><ul>
-<li><strong>Vibe:</strong> A modern, hipster honky-tonk. This East Austin bar (capacity ~299) is the place to go for two-stepping. With live country and Americana seven nights a week, the vibe is always lively, sweaty, and fun.</li>
-</ul>
-</li>
-<li><strong>Cheer Up Charlies</strong><ul>
-<li><strong>Vibe:</strong> Vibrant, inclusive, and joyful. A woman-owned, LGBTQ+-friendly cornerstone of the Red River district (capacity ~400). With a beautiful outdoor space, it's a safe and celebratory venue for indie pop, electronic music, and drag shows.</li>
-</ul>
-</li>
-<li><strong>The Hole in the Wall</strong><ul>
-<li><strong>Vibe:</strong> A legendary, gritty dive bar. Located near the UT campus for nearly 50 years, this tiny venue has been a launching pad for countless bands. The vibe is cheap beer, loud music, and decades of history scrawled on the walls. It's an authentic, unpretentious Austin institution.</li>
-</ul>
-</li>
-</ol>
-</article>
+      <h2>Austin's Music Venues: A Guide from Arenas to Dive Bars</h2>
+      <amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683"
+        layout="responsive"></amp-img>
+      <p>Austin's title as the "Live Music Capital of the World" isn't just a slogan; it's a way of life. The city is
+        home to a staggering number of venues, each with its own unique history, sound, and personality. From massive,
+        state-of-the-art arenas to tiny, historic dive bars, there's a stage for every sound and a vibe for every fan.
+        Here’s a guide to 15 essential venues that make up the fabric of Austin's music scene.</p>
+      <h2>The Big Stages: Arenas &amp; Amphitheaters</h2>
+      <p>These are the venues that host the biggest names in music. They offer large-scale production and a chance to
+        see global superstars.</p>
+      <ol>
+        <li><strong>Moody Center</strong>
+          <ul>
+            <li><strong>Vibe:</strong> State-of-the-art and massive. This 15,000+ capacity arena on the UT campus is
+              Austin's newest and biggest indoor venue. It's a premium, modern experience with perfect sound, designed
+              for the largest touring pop, rock, and country acts.</li>
+          </ul>
+        </li>
+        <li><strong>Germania Insurance Amphitheater</strong>
+          <ul>
+            <li><strong>Vibe:</strong> A classic, sprawling outdoor concert experience. Located at the Circuit of the
+              Americas (COTA), this 14,000-capacity amphitheater is the spot for huge summer tours. The vibe is
+              festival-like, with a mix of reserved seats and a large lawn for spreading out under the stars.</li>
+          </ul>
+        </li>
+        <li><strong>Stubb's Waller Creek Amphitheater</strong>
+          <ul>
+            <li><strong>Vibe:</strong> An iconic Austin night out. This beloved 2,200-capacity outdoor amphitheater is
+              attached to the legendary Stubb's BBQ. Located in the Red River Cultural District, it hosts a wide range
+              of popular indie, alternative, and hip-hop acts. The atmosphere is always energetic and fun.</li>
+          </ul>
+        </li>
+        <li><strong>ACL Live at The Moody Theater</strong>
+          <ul>
+            <li><strong>Vibe:</strong> Pristine, intimate, and iconic. Home to the tapings of the "Austin City Limits"
+              TV show, this 2,750-capacity theater is an acoustically perfect space. Despite its size, it feels
+              incredibly intimate. It's a "grown-up" concert experience, perfect for legendary performers and attentive
+              audiences.</li>
+          </ul>
+        </li>
+      </ol>
+      <h2>The Sweet Spot: Medium-Sized Clubs &amp; Theaters</h2>
+      <p>These venues are the heart and soul of Austin's music scene, offering a chance to see established acts and
+        rising stars in a more intimate setting.</p>
+      <ol>
+        <li><strong>The Continental Club</strong>
+          <ul>
+            <li><strong>Vibe:</strong> Effortlessly cool and historic. This legendary South Congress club (capacity
+              ~175) has been hosting roots, rockabilly, and country since 1955. It’s a long, narrow, no-frills room
+              where the music is everything. An absolute must-visit.</li>
+          </ul>
+        </li>
+        <li><strong>Antone's Nightclub</strong>
+          <ul>
+            <li><strong>Vibe:</strong> The "Home of the Blues." A downtown institution (capacity ~400) that helped
+              launch Stevie Ray Vaughan. The atmosphere is reverent, with walls covered in photos of blues legends. It's
+              a historic space dedicated to preserving the blues tradition.</li>
+          </ul>
+        </li>
+        <li><strong>The Mohawk</strong>
+          <ul>
+            <li><strong>Vibe:</strong> A quintessential Austin rock club. With its multi-level outdoor stage and an
+              intimate indoor room (total capacity ~900), the Mohawk is a Red River staple. The vibe is a bit gritty and
+              always ready to rock, perfect for indie, punk, and metal shows.</li>
+          </ul>
+        </li>
+        <li><strong>The Parish</strong>
+          <ul>
+            <li><strong>Vibe:</strong> An intimate music lover's haven. Located on Sixth Street, this 450-capacity room
+              is known for its incredible sound system. It's a great place to see a touring band you love up close, with
+              a vibe that's squarely focused on the performance.</li>
+          </ul>
+        </li>
+        <li><strong>Emo's</strong>
+          <ul>
+            <li><strong>Vibe:</strong> Loud, energetic, and raw. While its new East Riverside location (capacity ~1,250)
+              is more polished than the original punk-rock dive, Emo's still carries the torch for high-energy
+              alternative, rock, and hip-hop shows.</li>
+          </ul>
+        </li>
+        <li><strong>Scoot Inn</strong>
+          <ul>
+            <li><strong>Vibe:</strong> Historic and rustic. As one of Texas's oldest bars (est. 1871), this East Austin
+              landmark (capacity ~800) has a relaxed, neighborhood feel. The large outdoor stage hosts a variety of
+              genres, making it a comfortable and classic spot to catch a show.</li>
+          </ul>
+        </li>
+      </ol>
+      <h2>The Up-Close Experience: Small &amp; Intimate Venues</h2>
+      <p>These are the places where you can be just a few feet from the performers, experiencing music in its most raw
+        and immediate form.</p>
+      <ol>
+        <li><strong>The Elephant Room</strong>
+          <ul>
+            <li><strong>Vibe:</strong> A genuine underground jazz club. Located in a downtown basement, this small
+              (under 100 capacity), dark, and intimate club is all about the music. The audience is there to listen,
+              making it a perfect, no-frills spot for jazz lovers.</li>
+          </ul>
+        </li>
+        <li><strong>The Saxon Pub</strong>
+          <ul>
+            <li><strong>Vibe:</strong> A respected listening room. This South Lamar pub (capacity ~150) is a haven for
+              singer-songwriters. The atmosphere is warm and cozy, designed for paying close attention to the craft of
+              songwriting.</li>
+          </ul>
+        </li>
+        <li><strong>The White Horse</strong>
+          <ul>
+            <li><strong>Vibe:</strong> A modern, hipster honky-tonk. This East Austin bar (capacity ~299) is the place
+              to go for two-stepping. With live country and Americana seven nights a week, the vibe is always lively,
+              sweaty, and fun.</li>
+          </ul>
+        </li>
+        <li><strong>Cheer Up Charlies</strong>
+          <ul>
+            <li><strong>Vibe:</strong> Vibrant, inclusive, and joyful. A woman-owned, LGBTQ+-friendly cornerstone of the
+              Red River district (capacity ~400). With a beautiful outdoor space, it's a safe and celebratory venue for
+              indie pop, electronic music, and drag shows.</li>
+          </ul>
+        </li>
+        <li><strong>The Hole in the Wall</strong>
+          <ul>
+            <li><strong>Vibe:</strong> A legendary, gritty dive bar. Located near the UT campus for nearly 50 years,
+              this tiny venue has been a launching pad for countless bands. The vibe is cheap beer, loud music, and
+              decades of history scrawled on the walls. It's an authentic, unpretentious Austin institution.</li>
+          </ul>
+        </li>
+      </ol>
+    </article>
   </main>
 </body>
+
 </html>
