--- a/austin_articles/06_record_shops.html
+++ b/austin_articles/06_record_shops.html
@@ -6,11 +6,10 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="Digging for Gold: A Guide to Austin's Best Record Shops - Minnow News">
+  <meta name="description" content="Digging for Gold: A Guide to Austin's Best Record Shops - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/austin_articles/06_record_shops.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -84,20 +83,7 @@
   </noscript>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -120,7 +106,9 @@
     data-credentials="include"></amp-analytics>
 
   <header class="header">
-    <a href="../index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="../index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="../index.html">Home</a>
       <a href="../about.html">About</a>
@@ -130,33 +118,58 @@
   </header>
   <main>
     <article>
-<h2>Digging for Gold: A Guide to Austin's Best Record Shops</h2>
-<amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
-<p>In a city that lives and breathes music, it's no surprise that Austin is home to a fantastic collection of record stores. These shops are more than just retail spaces; they are cultural hubs for music lovers, places of discovery, and vital parts of the city's artistic ecosystem. Whether you're a seasoned collector or a new vinyl enthusiast, here are six of the best record shops Austin has to offer.</p>
-<h3>1. Waterloo Records
+      <h2>Digging for Gold: A Guide to Austin's Best Record Shops</h2>
+      <amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683"
+        layout="responsive"></amp-img>
+      <p>In a city that lives and breathes music, it's no surprise that Austin is home to a fantastic collection of
+        record stores. These shops are more than just retail spaces; they are cultural hubs for music lovers, places of
+        discovery, and vital parts of the city's artistic ecosystem. Whether you're a seasoned collector or a new vinyl
+        enthusiast, here are six of the best record shops Austin has to offer.</p>
+      <h3>1. Waterloo Records
 
-Waterloo Records is the undisputed king of Austin record stores. An institution since 1982, this massive, 6,400-square-foot space is a must-visit for any music fan. It's bright, well-organized, and boasts an enormous selection of new and used vinyl, CDs, and DVDs across every genre imaginable. The staff is famously knowledgeable and passionate, and the store frequently hosts intimate in-store performances. If you only have time to visit one record store in Austin, this is the one.
+        Waterloo Records is the undisputed king of Austin record stores. An institution since 1982, this massive,
+        6,400-square-foot space is a must-visit for any music fan. It's bright, well-organized, and boasts an enormous
+        selection of new and used vinyl, CDs, and DVDs across every genre imaginable. The staff is famously
+        knowledgeable and passionate, and the store frequently hosts intimate in-store performances. If you only have
+        time to visit one record store in Austin, this is the one.
 
-<h3>2. End of an Ear
+        <h3>2. End of an Ear
 
-For the serious record collector, End of an Ear is a paradise. This South Austin shop is meticulously curated, offering a deep and diverse selection of new and used vinyl, with a particular strength in indie rock, experimental, jazz, and international music. The atmosphere is a bit more serious and reverent than Waterloo, and the staff are true aficionados. It's the kind of place you can spend hours in, digging through the crates and discovering hidden gems.
+          For the serious record collector, End of an Ear is a paradise. This South Austin shop is meticulously curated,
+          offering a deep and diverse selection of new and used vinyl, with a particular strength in indie rock,
+          experimental, jazz, and international music. The atmosphere is a bit more serious and reverent than Waterloo,
+          and the staff are true aficionados. It's the kind of place you can spend hours in, digging through the crates
+          and discovering hidden gems.
 
-<h3>3. Breakaway Records
+          <h3>3. Breakaway Records
 
-If you're looking for vintage soul, funk, and jazz, Breakaway Records is your spot. Located in the North Loop neighborhood, Breakaway specializes in used vinyl, with a focus on hard-to-find LPs and 45s. The store is well-organized and the pricing is fair, making it a favorite among local DJs and collectors. It's a smaller, more focused shop with a clear passion for its chosen genres.
+            If you're looking for vintage soul, funk, and jazz, Breakaway Records is your spot. Located in the North
+            Loop neighborhood, Breakaway specializes in used vinyl, with a focus on hard-to-find LPs and 45s. The store
+            is well-organized and the pricing is fair, making it a favorite among local DJs and collectors. It's a
+            smaller, more focused shop with a clear passion for its chosen genres.
 
-<h3>4. Antone's Record Shop
+            <h3>4. Antone's Record Shop
 
-Located next door to the legendary blues club of the same name, Antone's Record Shop is a shrine to the blues and its many offshoots. The shop specializes in blues, soul, R&B, and Texas music. It's a small but mighty store, packed with character and history. It's the perfect place to pick up a classic blues record before or after catching a show at the club.
+              Located next door to the legendary blues club of the same name, Antone's Record Shop is a shrine to the
+              blues and its many offshoots. The shop specializes in blues, soul, R&B, and Texas music. It's a small but
+              mighty store, packed with character and history. It's the perfect place to pick up a classic blues record
+              before or after catching a show at the club.
 
-<h3>5. Feels So Good
+              <h3>5. Feels So Good
 
-Feels So Good is more than just a record store; it's a creative hub. This South Austin spot combines a well-curated selection of new and used vinyl with a screen printing shop and an art gallery. The vibe is cool, creative, and very Austin. It's a great place to discover local artists, both on vinyl and on the walls.
+                Feels So Good is more than just a record store; it's a creative hub. This South Austin spot combines a
+                well-curated selection of new and used vinyl with a screen printing shop and an art gallery. The vibe is
+                cool, creative, and very Austin. It's a great place to discover local artists, both on vinyl and on the
+                walls.
 
-<h3>6. Piranha Records
+                <h3>6. Piranha Records
 
-Located in the North Campus area, Piranha Records is a classic, old-school record store. They offer a solid mix of new and used vinyl, CDs, and DVDs, with a focus on rock, punk, and metal. They also sell smoking accessories, giving the shop a classic counter-culture vibe. It's a great neighborhood store with a loyal following.
-</article>
+                  Located in the North Campus area, Piranha Records is a classic, old-school record store. They offer a
+                  solid mix of new and used vinyl, CDs, and DVDs, with a focus on rock, punk, and metal. They also sell
+                  smoking accessories, giving the shop a classic counter-culture vibe. It's a great neighborhood store
+                  with a loyal following.
+    </article>
   </main>
 </body>
+
 </html>
