--- a/austin_articles/09_staying_cool.html
+++ b/austin_articles/09_staying_cool.html
@@ -6,11 +6,10 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="How to Stay Cool in Austin (Literally and Figuratively) - Minnow News">
+  <meta name="description" content="How to Stay Cool in Austin (Literally and Figuratively) - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/austin_articles/09_staying_cool.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -84,20 +83,7 @@
   </noscript>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -120,7 +106,9 @@
     data-credentials="include"></amp-analytics>
 
   <header class="header">
-    <a href="../index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="../index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="../index.html">Home</a>
       <a href="../about.html">About</a>
@@ -130,50 +118,79 @@
   </header>
   <main>
     <article>
-<h2>How to Stay Cool in Austin (Literally and Figuratively)</h2>
-<amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
-<p>Austin is a city that prides itself on its "cool" factor. But in a place where summer temperatures regularly top 100 degrees, the concept of "cool" has two very important meanings. Here’s a guide to mastering both: how to beat the Texas heat, and how to tap into the city's unique cultural vibe.</p>
-<h2>How to Stay Cool: The Literal Guide</h2>
-<p>Surviving, and even enjoying, an Austin summer is an art form. It's all about finding water, shade, and a good attitude.</p>
-<ul>
-<li>
-<p><strong>Master the Holy Trinity of Swimming:</strong> Austin's identity is deeply connected to its swimming holes.</p>
-<ul>
-<li><strong>Barton Springs Pool:</strong> This three-acre, spring-fed pool in the heart of Zilker Park maintains a refreshing 68-70 degree temperature year-round. It's a quintessential Austin experience.</li>
-<li><strong>Deep Eddy Pool:</strong> The oldest swimming pool in Texas, this man-made pool is also spring-fed and offers a more traditional public pool experience with lap lanes and plenty of space to relax.</li>
-<li><strong>The Greenbelt:</strong> The Barton Creek Greenbelt is a network of trails with several popular swimming spots (like Twin Falls and Sculpture Falls) that appear when the water levels are right. It's a perfect combination of a hike and a swim.</li>
-</ul>
-</li>
-<li>
-<p><strong>Take a Day Trip:</strong> The surrounding Hill Country is dotted with stunning natural swimming holes. Consider a short drive to the cypress-lined <strong>Krause Springs</strong> in Spicewood or the beautiful <strong>Blue Hole</strong> in Wimberley.</p>
-</li>
-<li>
-<p><strong>Embrace Air Conditioning:</strong> There's no shame in seeking refuge indoors. Catch a movie at the <strong>Alamo Drafthouse</strong> (where you can get a meal and a drink delivered to your seat), explore the <strong>Blanton Museum of Art</strong>, or visit the <strong>Bullock Texas State History Museum</strong>.</p>
-</li>
-<li>
-<p><strong>Drink Your Cool:</strong> Sometimes, the best relief comes in a glass. A frozen margarita on a hot patio is a Texas tradition for a reason. For a non-alcoholic option, seek out one of the many local snow cone stands for a sweet, icy treat.</p>
-</li>
-</ul>
-<h2>How to Stay Cool: The Figurative Guide</h2>
-<p>Being "cool" in Austin isn't about being exclusive or aloof. It's about being engaged, curious, and willing to explore the things that make the city unique.</p>
-<ul>
-<li>
-<p><strong>Eat Like a Local:</strong> Go beyond the famous restaurants and explore the city's legendary food truck scene. Some of the best and most innovative food in Austin is served out of a trailer in a park. Find a neighborhood gem in East Austin or a classic diner in South Austin.</p>
-</li>
-<li>
-<p><strong>See Music the Austin Way:</strong> While the big festivals are fun, the real Austin music experience is seeing a local band at a small club. Go to The Continental Club, The Saxon Pub, or The White Horse on a weeknight. You'll experience the city's musical soul up close.</p>
-</li>
-<li>
-<p><strong>Get Outside (When It's Not 100 Degrees):</strong> The "cool" Austin lifestyle is an active one. Hike the Greenbelt in the morning, kayak or paddleboard on Lady Bird Lake, or just hang out with friends at Zilker Park.</p>
-</li>
-<li>
-<p><strong>Support Local:</strong> Instead of big box stores, check out the independent boutiques on South Congress or in the North Loop. Visit a farmers' market on the weekend. The spirit of "Keep Austin Weird" is best found in the small, independent businesses that give the city its character.</p>
-</li>
-<li>
-<p><strong>Bleed Verde:</strong> One of the newest and most exciting ways to feel like a local is to embrace the city's MLS team, Austin FC. The atmosphere at a home game at Q2 Stadium is electric and has quickly become a cornerstone of Austin's modern culture. Go to a game and cheer on the home team.</p>
-</li>
-</ul>
-</article>
+      <h2>How to Stay Cool in Austin (Literally and Figuratively)</h2>
+      <amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683"
+        layout="responsive"></amp-img>
+      <p>Austin is a city that prides itself on its "cool" factor. But in a place where summer temperatures regularly
+        top 100 degrees, the concept of "cool" has two very important meanings. Here’s a guide to mastering both: how to
+        beat the Texas heat, and how to tap into the city's unique cultural vibe.</p>
+      <h2>How to Stay Cool: The Literal Guide</h2>
+      <p>Surviving, and even enjoying, an Austin summer is an art form. It's all about finding water, shade, and a good
+        attitude.</p>
+      <ul>
+        <li>
+          <p><strong>Master the Holy Trinity of Swimming:</strong> Austin's identity is deeply connected to its swimming
+            holes.</p>
+          <ul>
+            <li><strong>Barton Springs Pool:</strong> This three-acre, spring-fed pool in the heart of Zilker Park
+              maintains a refreshing 68-70 degree temperature year-round. It's a quintessential Austin experience.</li>
+            <li><strong>Deep Eddy Pool:</strong> The oldest swimming pool in Texas, this man-made pool is also
+              spring-fed and offers a more traditional public pool experience with lap lanes and plenty of space to
+              relax.</li>
+            <li><strong>The Greenbelt:</strong> The Barton Creek Greenbelt is a network of trails with several popular
+              swimming spots (like Twin Falls and Sculpture Falls) that appear when the water levels are right. It's a
+              perfect combination of a hike and a swim.</li>
+          </ul>
+        </li>
+        <li>
+          <p><strong>Take a Day Trip:</strong> The surrounding Hill Country is dotted with stunning natural swimming
+            holes. Consider a short drive to the cypress-lined <strong>Krause Springs</strong> in Spicewood or the
+            beautiful <strong>Blue Hole</strong> in Wimberley.</p>
+        </li>
+        <li>
+          <p><strong>Embrace Air Conditioning:</strong> There's no shame in seeking refuge indoors. Catch a movie at the
+            <strong>Alamo Drafthouse</strong> (where you can get a meal and a drink delivered to your seat), explore the
+            <strong>Blanton Museum of Art</strong>, or visit the <strong>Bullock Texas State History Museum</strong>.
+          </p>
+        </li>
+        <li>
+          <p><strong>Drink Your Cool:</strong> Sometimes, the best relief comes in a glass. A frozen margarita on a hot
+            patio is a Texas tradition for a reason. For a non-alcoholic option, seek out one of the many local snow
+            cone stands for a sweet, icy treat.</p>
+        </li>
+      </ul>
+      <h2>How to Stay Cool: The Figurative Guide</h2>
+      <p>Being "cool" in Austin isn't about being exclusive or aloof. It's about being engaged, curious, and willing to
+        explore the things that make the city unique.</p>
+      <ul>
+        <li>
+          <p><strong>Eat Like a Local:</strong> Go beyond the famous restaurants and explore the city's legendary food
+            truck scene. Some of the best and most innovative food in Austin is served out of a trailer in a park. Find
+            a neighborhood gem in East Austin or a classic diner in South Austin.</p>
+        </li>
+        <li>
+          <p><strong>See Music the Austin Way:</strong> While the big festivals are fun, the real Austin music
+            experience is seeing a local band at a small club. Go to The Continental Club, The Saxon Pub, or The White
+            Horse on a weeknight. You'll experience the city's musical soul up close.</p>
+        </li>
+        <li>
+          <p><strong>Get Outside (When It's Not 100 Degrees):</strong> The "cool" Austin lifestyle is an active one.
+            Hike the Greenbelt in the morning, kayak or paddleboard on Lady Bird Lake, or just hang out with friends at
+            Zilker Park.</p>
+        </li>
+        <li>
+          <p><strong>Support Local:</strong> Instead of big box stores, check out the independent boutiques on South
+            Congress or in the North Loop. Visit a farmers' market on the weekend. The spirit of "Keep Austin Weird" is
+            best found in the small, independent businesses that give the city its character.</p>
+        </li>
+        <li>
+          <p><strong>Bleed Verde:</strong> One of the newest and most exciting ways to feel like a local is to embrace
+            the city's MLS team, Austin FC. The atmosphere at a home game at Q2 Stadium is electric and has quickly
+            become a cornerstone of Austin's modern culture. Go to a game and cheer on the home team.</p>
+        </li>
+      </ul>
+    </article>
   </main>
 </body>
+
 </html>
