--- a/austin_articles/11_planet_k.html
+++ b/austin_articles/11_planet_k.html
@@ -6,12 +6,11 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-    <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+  <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="What is Planet K? An Explanation of the Austin Institution - Minnow News">
+  <meta name="description" content="What is Planet K? An Explanation of the Austin Institution - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/austin_articles/11_planet_k.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -84,13 +83,14 @@
     </style>
   </noscript>
   <style amp-custom>
-        body {
+    body {
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       line-height: 1.6;
       color: #333;
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -98,8 +98,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -107,9 +108,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -117,64 +120,61 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
+      color: #333;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     .tiktok-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem 0;
     }
-      </style>
+  </style>
+
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -197,7 +197,9 @@
     data-credentials="include"></amp-analytics>
 
   <header class="header">
-    <a href="../index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="../index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="../index.html">Home</a>
       <a href="../about.html">About</a>
@@ -207,34 +209,49 @@
   </header>
   <main>
     <article>
-<h2>What is Planet K? An Explanation of the Austin Institution</h2>
-<amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
-<p>If you're new to Austin, you've likely seen the distinctive, often colorful storefronts for a place called "Planet K." And you might have wondered, "What exactly <em>is</em> Planet K?" The name is whimsical, but the answer is simple: Planet K is a long-standing Austin institution and a classic example of the "Keep Austin Weird" spirit in retail form.</p>
-<h2>It's Not a Planet, It's a Head Shop</h2>
-<p>At its core, Planet K is a chain of smoke shops, or "head shops." For decades, it has been the go-to spot in Austin and surrounding areas for a wide variety of smoking-related products. This includes:</p>
-<ul>
-<li>A massive selection of pipes, from simple glass pieces to intricate water pipes.</li>
-<li>Tobacco and tobacco-related products.</li>
-<li>Vaporizers and e-cigarette supplies.</li>
-<li>A wide range of rolling papers, grinders, and other accessories.</li>
-</ul>
-              <div class="tiktok-container">
-          <amp-tiktok width="325" height="575" data-src="https://www.tiktok.com/@calebcomplains/video/7430038678518435115"></amp-tiktok>
-        </div>
-<p>Due to its long history and wide selection, Planet K has been voted "Austin's Best Smoke Shop" on multiple occasions, solidifying its status as a leader in this retail category.</p>
-<h2>More Than Just a Smoke Shop</h2>
-<p>What truly makes Planet K an Austin institution is everything else it sells. A trip to Planet K is an adventure in novelty, humor, and counter-culture. The stores are packed with an eclectic and often "naughty" mix of items. You can find:</p>
-<ul>
-<li>Gag gifts and humorous novelties.</li>
-<li>Incense, candles, and tapestries.</li>
-<li>A selection of adult toys and risqué greeting cards.</li>
-<li>Clothing, stickers, and other items that celebrate a "weird" and alternative lifestyle.</li>
-</ul>
-<p>As the Austin Chronicle once cheekily noted, there is "plenty of giggle opportunity" inside. It's a place that doesn't take itself too seriously and invites customers to explore their playful and irreverent side.</p>
-<h2>A Piece of Austin's Culture</h2>
-<p>Planet K is more than just a store; it's a reflection of a certain part of Austin's culture. It represents the city's independent, non-conformist, and slightly rebellious streak. The business is also involved in the local community, sponsoring events like fireworks shows and supporting local charities.</p>
-<p>So, while it may not be an actual planet, Planet K is very much its own world. It's a quirky, beloved, and undeniably weird institution that has been a part of the Austin landscape for years, offering a unique retail experience that you're unlikely to find anywhere else.</p>
-</article>
+      <h2>What is Planet K? An Explanation of the Austin Institution</h2>
+      <amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683"
+        layout="responsive"></amp-img>
+      <p>If you're new to Austin, you've likely seen the distinctive, often colorful storefronts for a place called
+        "Planet K." And you might have wondered, "What exactly <em>is</em> Planet K?" The name is whimsical, but the
+        answer is simple: Planet K is a long-standing Austin institution and a classic example of the "Keep Austin
+        Weird" spirit in retail form.</p>
+      <h2>It's Not a Planet, It's a Head Shop</h2>
+      <p>At its core, Planet K is a chain of smoke shops, or "head shops." For decades, it has been the go-to spot in
+        Austin and surrounding areas for a wide variety of smoking-related products. This includes:</p>
+      <ul>
+        <li>A massive selection of pipes, from simple glass pieces to intricate water pipes.</li>
+        <li>Tobacco and tobacco-related products.</li>
+        <li>Vaporizers and e-cigarette supplies.</li>
+        <li>A wide range of rolling papers, grinders, and other accessories.</li>
+      </ul>
+      <div class="tiktok-container">
+        <amp-tiktok width="325" height="575"
+          data-src="https://www.tiktok.com/@calebcomplains/video/7430038678518435115"></amp-tiktok>
+      </div>
+      <p>Due to its long history and wide selection, Planet K has been voted "Austin's Best Smoke Shop" on multiple
+        occasions, solidifying its status as a leader in this retail category.</p>
+      <h2>More Than Just a Smoke Shop</h2>
+      <p>What truly makes Planet K an Austin institution is everything else it sells. A trip to Planet K is an adventure
+        in novelty, humor, and counter-culture. The stores are packed with an eclectic and often "naughty" mix of items.
+        You can find:</p>
+      <ul>
+        <li>Gag gifts and humorous novelties.</li>
+        <li>Incense, candles, and tapestries.</li>
+        <li>A selection of adult toys and risqué greeting cards.</li>
+        <li>Clothing, stickers, and other items that celebrate a "weird" and alternative lifestyle.</li>
+      </ul>
+      <p>As the Austin Chronicle once cheekily noted, there is "plenty of giggle opportunity" inside. It's a place that
+        doesn't take itself too seriously and invites customers to explore their playful and irreverent side.</p>
+      <h2>A Piece of Austin's Culture</h2>
+      <p>Planet K is more than just a store; it's a reflection of a certain part of Austin's culture. It represents the
+        city's independent, non-conformist, and slightly rebellious streak. The business is also involved in the local
+        community, sponsoring events like fireworks shows and supporting local charities.</p>
+      <p>So, while it may not be an actual planet, Planet K is very much its own world. It's a quirky, beloved, and
+        undeniably weird institution that has been a part of the Austin landscape for years, offering a unique retail
+        experience that you're unlikely to find anywhere else.</p>
+    </article>
   </main>
 </body>
+
 </html>
