--- a/ben-and-jerrys-article.html
+++ b/ben-and-jerrys-article.html
@@ -6,8 +6,8 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description"
     content="Ben & Jerry's Co-Founder Jerry Greenfield Quits, Citing Conflict with Unilever - Minnow News">
@@ -90,6 +90,7 @@
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -97,8 +98,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -106,9 +108,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -116,68 +120,64 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
-        margin-top: 2rem;
+      color: #333;
+      margin-top: 2rem;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     blockquote {
-        border-left: 4px solid #ccc;
-        padding-left: 1rem;
-        margin-left: 0;
-        font-style: italic;
-        color: #666;
+      border-left: 4px solid #ccc;
+      padding-left: 1rem;
+      margin-left: 0;
+      font-style: italic;
+      color: #666;
     }
   </style>
 </head>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -199,7 +199,9 @@
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
   <header class="header">
-    <a href="index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -209,25 +211,47 @@
   </header>
   <main>
     <article>
-        <h2>The Big Melt: Jerry Greenfield Quits Ben & Jerry's After 47 Years, Citing Stifled Social Mission</h2>
+      <h2>The Big Melt: Jerry Greenfield Quits Ben & Jerry's After 47 Years, Citing Stifled Social Mission</h2>
 
-        <p>In a move that marks the end of an era for one of America's most beloved brands, Jerry Greenfield, the co-founder of Ben & Jerry's, has announced his departure from the company. Greenfield's exit comes after years of escalating tension with parent company Unilever, which he claims has stifled the ice cream maker's famous social and political activism.</p>
+      <p>In a move that marks the end of an era for one of America's most beloved brands, Jerry Greenfield, the
+        co-founder of Ben & Jerry's, has announced his departure from the company. Greenfield's exit comes after years
+        of escalating tension with parent company Unilever, which he claims has stifled the ice cream maker's famous
+        social and political activism.</p>
 
-        <amp-img src="assets/Ben_&_Jerry's_Cookie_Dough_Ice_Cream_465_ml,_May_2025.webp" alt="A pint of Ben & Jerry's ice cream" class="article-image" width="1024" height="768" layout="responsive"></amp-img>
+      <amp-img src="assets/Ben_&_Jerry's_Cookie_Dough_Ice_Cream_465_ml,_May_2025.webp"
+        alt="A pint of Ben & Jerry's ice cream" class="article-image" width="1024" height="768"
+        layout="responsive"></amp-img>
 
-        <h3>A Sweet Beginning with a Social Conscience</h3>
-        <p>Ben Cohen and Jerry Greenfield started their iconic ice cream company in a renovated gas station in Burlington, Vermont, in 1978. From the beginning, Ben & Jerry's was as much about its "hippy values" as it was about its quirky, chunk-filled flavors. The company pioneered the concept of corporate social responsibility, donating a percentage of its profits to charity and taking public stances on issues like environmental protection and fair trade.</p>
+      <h3>A Sweet Beginning with a Social Conscience</h3>
+      <p>Ben Cohen and Jerry Greenfield started their iconic ice cream company in a renovated gas station in Burlington,
+        Vermont, in 1978. From the beginning, Ben & Jerry's was as much about its "hippy values" as it was about its
+        quirky, chunk-filled flavors. The company pioneered the concept of corporate social responsibility, donating a
+        percentage of its profits to charity and taking public stances on issues like environmental protection and fair
+        trade.</p>
 
-        <h3>The "Ethical Sellout" to Unilever</h3>
-        <p>In 2000, in what was dubbed an "ethical sellout," Ben & Jerry's was acquired by the multinational consumer goods giant Unilever. A key part of the acquisition agreement was the creation of an independent Board of Directors tasked with preserving and expanding the company's social mission. For years, this unique arrangement seemed to work, allowing Ben & Jerry's to continue its activism on a global scale.</p>
+      <h3>The "Ethical Sellout" to Unilever</h3>
+      <p>In 2000, in what was dubbed an "ethical sellout," Ben & Jerry's was acquired by the multinational consumer
+        goods giant Unilever. A key part of the acquisition agreement was the creation of an independent Board of
+        Directors tasked with preserving and expanding the company's social mission. For years, this unique arrangement
+        seemed to work, allowing Ben & Jerry's to continue its activism on a global scale.</p>
 
-        <h3>A Rocky Relationship</h3>
-        <p>However, the relationship between the progressive ice cream brand and its corporate parent has grown increasingly frosty. Tensions famously came to a head in 2022 when Ben & Jerry's announced it would stop selling its products in the occupied Palestinian territories, a move Unilever attempted to override. According to Greenfield, this was just one of many instances where Unilever interfered with the brand's ability to speak out on important issues, violating the spirit of their acquisition agreement.</p>
+      <h3>A Rocky Relationship</h3>
+      <p>However, the relationship between the progressive ice cream brand and its corporate parent has grown
+        increasingly frosty. Tensions famously came to a head in 2022 when Ben & Jerry's announced it would stop selling
+        its products in the occupied Palestinian territories, a move Unilever attempted to override. According to
+        Greenfield, this was just one of many instances where Unilever interfered with the brand's ability to speak out
+        on important issues, violating the spirit of their acquisition agreement.</p>
 
-        <blockquote>"When you're owned by a conglomerate, there are pressures to conform to a certain corporate culture. The radical, outspoken spirit that defined us has been slowly chipped away." - Source close to Jerry Greenfield</blockquote>
+      <blockquote>"When you're owned by a conglomerate, there are pressures to conform to a certain corporate culture.
+        The radical, outspoken spirit that defined us has been slowly chipped away." - Source close to Jerry Greenfield
+      </blockquote>
 
-        <h3>The End of an Era</h3>
-        <p>Greenfield's departure signifies a major turning point for Ben & Jerry's. While the company will undoubtedly continue to produce popular flavors like "Cherry Garcia" and "Phish Food," the departure of its co-founder raises serious questions about its future as a vehicle for social change. For the millions of fans who were drawn to the brand's values as much as its ice cream, it's a bittersweet end to a remarkable 47-year journey.</p>
+      <h3>The End of an Era</h3>
+      <p>Greenfield's departure signifies a major turning point for Ben & Jerry's. While the company will undoubtedly
+        continue to produce popular flavors like "Cherry Garcia" and "Phish Food," the departure of its co-founder
+        raises serious questions about its future as a vehicle for social change. For the millions of fans who were
+        drawn to the brand's values as much as its ice cream, it's a bittersweet end to a remarkable 47-year journey.
+      </p>
     </article>
   </main>
 </body>
