--- a/haam-day-2025.html
+++ b/haam-day-2025.html
@@ -6,12 +6,11 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+
   <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="The Heartbeat of Austin: A Complete Guide to HAAM Day 2025 - Minnow News">
+  <meta name="description" content="The Heartbeat of Austin: A Complete Guide to HAAM Day 2025 - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/haam-day-2025.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -91,6 +90,7 @@
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -98,8 +98,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -107,9 +108,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -117,66 +120,62 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
+      color: #333;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     .tiktok-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem 0;
     }
   </style>
 </head>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -198,7 +197,9 @@
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
   <header class="header">
-    <a href="index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -208,34 +209,70 @@
   </header>
   <main>
     <article>
-        <h2>The Heartbeat of Austin: A Complete Guide to HAAM Day 2025</h2>
+      <h2>The Heartbeat of Austin: A Complete Guide to HAAM Day 2025</h2>
 
-        <p>On Tuesday, September 23, 2025, Austin's identity as the "Live Music Capital of the World" will come alive as the citywide HAAM Day Music Festival celebrates its 20th anniversary. This annual event is the world's largest one-day, all-local music festival, featuring an incredible lineup of more than 300 musicians performing over 250 free shows at more than 100 venues across Central Texas. HAAM Day is not just a festival; it's a citywide fundraiser to support the Health Alliance for Austin Musicians (HAAM), an organization that provides affordable healthcare services to Austin's low-income, working musicians.</p>
+      <p>On Tuesday, September 23, 2025, Austin's identity as the "Live Music Capital of the World" will come alive as
+        the citywide HAAM Day Music Festival celebrates its 20th anniversary. This annual event is the world's largest
+        one-day, all-local music festival, featuring an incredible lineup of more than 300 musicians performing over 250
+        free shows at more than 100 venues across Central Texas. HAAM Day is not just a festival; it's a citywide
+        fundraiser to support the Health Alliance for Austin Musicians (HAAM), an organization that provides affordable
+        healthcare services to Austin's low-income, working musicians.</p>
 
-        <amp-img src="assets/austin.webp" alt="Skyline of Austin, Texas" class="article-image" width="885" height="497" layout="responsive"></amp-img>
+      <amp-img src="assets/austin.webp" alt="Skyline of Austin, Texas" class="article-image" width="885" height="497"
+        layout="responsive"></amp-img>
 
-        <p>The festival truly transforms Austin into a live music destination, with performances happening everywhere from iconic music halls to unexpected places like grocery stores and airport terminals. It is a testament to the community's commitment to protecting the people who create the soundtrack of the city.</p>
+      <p>The festival truly transforms Austin into a live music destination, with performances happening everywhere from
+        iconic music halls to unexpected places like grocery stores and airport terminals. It is a testament to the
+        community's commitment to protecting the people who create the soundtrack of the city.</p>
 
-        <div class="tiktok-container">
-          <amp-tiktok width="325" height="575" data-src="https://www.tiktok.com/@calebcomplains/video/7551532579036466463"></amp-tiktok>
-        </div>
+      <div class="tiktok-container">
+        <amp-tiktok width="325" height="575"
+          data-src="https://www.tiktok.com/@calebcomplains/video/7551532579036466463"></amp-tiktok>
+      </div>
 
-        <h3>A Citywide Showcase: Artists and Venues</h3>
-        <p>The 2025 HAAM Day Music Festival promises a diverse and expansive lineup, with something for every musical taste. The day kicks off bright and early with live music starting at 6 a.m. at the H-E-B on South Congress, featuring artists like Scrappy Jud Newcomb and Troy Campbell. Later in the day, showcases will pop up at various H-E-B locations, including Nutty Brown and Hancock Center.</p>
-        <p>Iconic Austin venues are also at the heart of the festival, with curated showcases at legendary spots like Stubb's Bar-B-Q, Central Machine Works, and The ABGB. Fans can also catch intimate performances at beloved clubs like The Continental Club, Guero's Oak Garden, and Antone's Nightclub. The festival also includes unique showcases at locations like the Texas State Capitol steps, where singer-songwriter Gina Chavez is scheduled to perform.</p>
-        <p>Other participating venues and businesses that will be filled with live music throughout the day include: Amy’s Ice Creams, Dell Children’s Medical Center and Dell Seton Medical Center, Schlotzsky’s, ThunderCloud Subs, Tacodeli, Waterloo Records & Video, The Long Center, YETI Flagship, The Trail Conservancy, Hotel Vegas, and Meanwhile Brewing Co.</p>
+      <h3>A Citywide Showcase: Artists and Venues</h3>
+      <p>The 2025 HAAM Day Music Festival promises a diverse and expansive lineup, with something for every musical
+        taste. The day kicks off bright and early with live music starting at 6 a.m. at the H-E-B on South Congress,
+        featuring artists like Scrappy Jud Newcomb and Troy Campbell. Later in the day, showcases will pop up at various
+        H-E-B locations, including Nutty Brown and Hancock Center.</p>
+      <p>Iconic Austin venues are also at the heart of the festival, with curated showcases at legendary spots like
+        Stubb's Bar-B-Q, Central Machine Works, and The ABGB. Fans can also catch intimate performances at beloved clubs
+        like The Continental Club, Guero's Oak Garden, and Antone's Nightclub. The festival also includes unique
+        showcases at locations like the Texas State Capitol steps, where singer-songwriter Gina Chavez is scheduled to
+        perform.</p>
+      <p>Other participating venues and businesses that will be filled with live music throughout the day include: Amy’s
+        Ice Creams, Dell Children’s Medical Center and Dell Seton Medical Center, Schlotzsky’s, ThunderCloud Subs,
+        Tacodeli, Waterloo Records & Video, The Long Center, YETI Flagship, The Trail Conservancy, Hotel Vegas, and
+        Meanwhile Brewing Co.</p>
 
-        <h3>Featured Artists</h3>
-        <p>The sheer volume of artists participating is staggering. The lineup features both established legends and emerging talent, including Bob Schneider, The Watters, The Peterson Brothers, Ruthie Craft, Sir Woman, Rey Arteaga, Theo Love, Pedal Steel Noah, McKenna Michaels, Mixer Rogers, Courtney Santana, and Chief Cleopatra. The festival also includes performances from acts like The Criticals, S.G. Goodman, Soul Man Sam, and Wook Wizard, who conjures up a full-band sound as a solo act. The diverse list of participating artists also includes Rey Arteaga, Ella Reid, Bonnie Whitmore, Graham Wilkinson, and Paula Maya, among many others.</p>
+      <h3>Featured Artists</h3>
+      <p>The sheer volume of artists participating is staggering. The lineup features both established legends and
+        emerging talent, including Bob Schneider, The Watters, The Peterson Brothers, Ruthie Craft, Sir Woman, Rey
+        Arteaga, Theo Love, Pedal Steel Noah, McKenna Michaels, Mixer Rogers, Courtney Santana, and Chief Cleopatra. The
+        festival also includes performances from acts like The Criticals, S.G. Goodman, Soul Man Sam, and Wook Wizard,
+        who conjures up a full-band sound as a solo act. The diverse list of participating artists also includes Rey
+        Arteaga, Ella Reid, Bonnie Whitmore, Graham Wilkinson, and Paula Maya, among many others.</p>
 
-        <h3>A Mission Powered by the Community</h3>
-        <p>The primary goal of HAAM Day is to raise awareness and funds for the Health Alliance for Austin Musicians. Since 2005, HAAM has helped over 3,200 local musicians access more than $200 million in healthcare services, from basic checkups to dental work and mental health support. Every dollar raised on HAAM Day is leveraged into significant healthcare services, with every $200 in donations turning into $1,400 in direct healthcare.</p>
-        <p>This year's fundraising goal is to surpass the over $800,000 raised in the previous year, and the community has stepped up to help. The festival is powered by a network of dedicated sponsors, partners, and individual fundraisers.</p>
+      <h3>A Mission Powered by the Community</h3>
+      <p>The primary goal of HAAM Day is to raise awareness and funds for the Health Alliance for Austin Musicians.
+        Since 2005, HAAM has helped over 3,200 local musicians access more than $200 million in healthcare services,
+        from basic checkups to dental work and mental health support. Every dollar raised on HAAM Day is leveraged into
+        significant healthcare services, with every $200 in donations turning into $1,400 in direct healthcare.</p>
+      <p>This year's fundraising goal is to surpass the over $800,000 raised in the previous year, and the community has
+        stepped up to help. The festival is powered by a network of dedicated sponsors, partners, and individual
+        fundraisers.</p>
 
-        <h3>Key Sponsors and Community Partners</h3>
-        <p>The event is presented by PNC, SXSW, and C3 Presents. Other major sponsors and community supporters include: Diamond-level sponsors: Armadillo World Headquarters, Aubrey & Bobby Epstein, Circuit of The Americas, Dulce Vida Tequila, Favor Delivery, FVF Law, G&A Partners, Metropolis Apartments, St. David's Foundation, Still Austin Whiskey Co., Topfer Family Foundation, Richman Property Services, and YETI.</p>
-        <p>Media partners: Audacy Austin, Austin Chronicle, Austin Monthly, CBS Austin, City Cast Austin, Community Impact, CultureMap Austin, FOX 7, iHeart Media, KOOP, KAZI, KUT/KUTX, KVUE, KXAN, Spectrum News, and Waterloo Media.</p>
-        <p>For a full list of artists, venues, and a complete guide to the day, be sure to visit the official HAAM website at myhaam.org. You can also use the interactive map to plan your day: viewer.mapme.com/haam-day-music-festival-2025.</p>
+      <h3>Key Sponsors and Community Partners</h3>
+      <p>The event is presented by PNC, SXSW, and C3 Presents. Other major sponsors and community supporters include:
+        Diamond-level sponsors: Armadillo World Headquarters, Aubrey & Bobby Epstein, Circuit of The Americas, Dulce
+        Vida Tequila, Favor Delivery, FVF Law, G&A Partners, Metropolis Apartments, St. David's Foundation, Still Austin
+        Whiskey Co., Topfer Family Foundation, Richman Property Services, and YETI.</p>
+      <p>Media partners: Audacy Austin, Austin Chronicle, Austin Monthly, CBS Austin, City Cast Austin, Community
+        Impact, CultureMap Austin, FOX 7, iHeart Media, KOOP, KAZI, KUT/KUTX, KVUE, KXAN, Spectrum News, and Waterloo
+        Media.</p>
+      <p>For a full list of artists, venues, and a complete guide to the day, be sure to visit the official HAAM website
+        at myhaam.org. You can also use the interactive map to plan your day:
+        viewer.mapme.com/haam-day-music-festival-2025.</p>
     </article>
   </main>
 </body>
