--- a/austin_articles/01_real_estate_trends.html
+++ b/austin_articles/01_real_estate_trends.html
@@ -6,11 +6,10 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="Austin's Real Estate Market: Boom, Bust, or Both? - Minnow News">
+  <meta name="description" content="Austin's Real Estate Market: Boom, Bust, or Both? - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/austin_articles/01_real_estate_trends.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -84,20 +83,7 @@
   </noscript>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -120,7 +106,9 @@
     data-credentials="include"></amp-analytics>
 
   <header class="header">
-    <a href="../index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="../index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="../index.html">Home</a>
       <a href="../about.html">About</a>
@@ -130,24 +118,47 @@
   </header>
   <main>
     <article>
-<h2>Austin's Real Estate Market: Boom, Bust, or Both?</h2>
-<amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
-<p>For years, Austin, Texas, was the undisputed champion of the housing boom. A seemingly endless influx of tech companies and new residents fueled a frenetic market where bidding wars were the norm and prices skyrocketed. But as we head into 2026, the question on everyone's mind is: has the bubble burst? The answer, it seems, is not a simple "boom" or "bust," but a complex and evolving "both."</p>
-<h2>The Great Cooldown: A Buyer's Market Emerges</h2>
-<p>After a period of unprecedented growth, Austin's real estate market has undergone a significant cooldown. Multiple reports from late 2025, including those from Realtor.com and Zillow, have officially declared Austin a "buyer's market." This is a stark reversal from the pandemic-era frenzy.</p>
-<p>Several key factors have contributed to this shift:</p>
-<ul>
-<li><strong>Increased Inventory:</strong> The number of homes for sale has surged. Reports from the Austin Board of Realtors (ABoR) show a significant year-over-year increase in active listings. This gives buyers more choices and reduces the pressure to make snap decisions.</li>
-<li><strong>Longer Days on Market:</strong> Homes are no longer flying off the market in a matter of days. The average time a home spends on the market has stretched to over 70 days, giving buyers more time to negotiate and perform due diligence.</li>
-<li><strong>Price Stabilization:</strong> While the dramatic price hikes are a thing of the past, the market hasn't crashed. Instead, prices have stabilized and, in some cases, slightly corrected. Depending on the source, median home prices have seen a modest single-digit percentage change, a far cry from the double-digit increases of previous years.</li>
-</ul>
-<h2>What This Means for Buyers and Sellers</h2>
-<p>For <strong>buyers</strong>, the current market is a welcome relief. The increased inventory and reduced competition give them more negotiating power. It's an opportunity to enter a market that was once prohibitively competitive.</p>
-<p>For <strong>sellers</strong>, the landscape has changed. The days of multiple, over-asking-price offers are largely gone. Sellers now need to be more strategic with their pricing and marketing to attract buyers in a more crowded field.</p>
-<h2>The Verdict: Not a Bust, but a Rebalancing</h2>
-<p>So, is Austin's real estate market in a bust? Not exactly. It's more accurate to say it's experiencing a much-needed rebalancing. The boom was unsustainable, and the current market represents a return to a healthier, more stable equilibrium.</p>
-<p>The city's strong job market and continued appeal as a cultural hub suggest that the long-term outlook remains positive. However, the days of easy, rapid gains are likely over. The Austin real estate market has matured, and with that maturity comes a more nuanced and complex reality for both buyers and sellers. It's a market that's both cooling off from a boom and settling into a new, more sustainable normal.</p>
-</article>
+      <h2>Austin's Real Estate Market: Boom, Bust, or Both?</h2>
+      <amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683"
+        layout="responsive"></amp-img>
+      <p>For years, Austin, Texas, was the undisputed champion of the housing boom. A seemingly endless influx of tech
+        companies and new residents fueled a frenetic market where bidding wars were the norm and prices skyrocketed.
+        But as we head into 2026, the question on everyone's mind is: has the bubble burst? The answer, it seems, is not
+        a simple "boom" or "bust," but a complex and evolving "both."</p>
+      <h2>The Great Cooldown: A Buyer's Market Emerges</h2>
+      <p>After a period of unprecedented growth, Austin's real estate market has undergone a significant cooldown.
+        Multiple reports from late 2025, including those from Realtor.com and Zillow, have officially declared Austin a
+        "buyer's market." This is a stark reversal from the pandemic-era frenzy.</p>
+      <p>Several key factors have contributed to this shift:</p>
+      <ul>
+        <li><strong>Increased Inventory:</strong> The number of homes for sale has surged. Reports from the Austin Board
+          of Realtors (ABoR) show a significant year-over-year increase in active listings. This gives buyers more
+          choices and reduces the pressure to make snap decisions.</li>
+        <li><strong>Longer Days on Market:</strong> Homes are no longer flying off the market in a matter of days. The
+          average time a home spends on the market has stretched to over 70 days, giving buyers more time to negotiate
+          and perform due diligence.</li>
+        <li><strong>Price Stabilization:</strong> While the dramatic price hikes are a thing of the past, the market
+          hasn't crashed. Instead, prices have stabilized and, in some cases, slightly corrected. Depending on the
+          source, median home prices have seen a modest single-digit percentage change, a far cry from the double-digit
+          increases of previous years.</li>
+      </ul>
+      <h2>What This Means for Buyers and Sellers</h2>
+      <p>For <strong>buyers</strong>, the current market is a welcome relief. The increased inventory and reduced
+        competition give them more negotiating power. It's an opportunity to enter a market that was once prohibitively
+        competitive.</p>
+      <p>For <strong>sellers</strong>, the landscape has changed. The days of multiple, over-asking-price offers are
+        largely gone. Sellers now need to be more strategic with their pricing and marketing to attract buyers in a more
+        crowded field.</p>
+      <h2>The Verdict: Not a Bust, but a Rebalancing</h2>
+      <p>So, is Austin's real estate market in a bust? Not exactly. It's more accurate to say it's experiencing a
+        much-needed rebalancing. The boom was unsustainable, and the current market represents a return to a healthier,
+        more stable equilibrium.</p>
+      <p>The city's strong job market and continued appeal as a cultural hub suggest that the long-term outlook remains
+        positive. However, the days of easy, rapid gains are likely over. The Austin real estate market has matured, and
+        with that maturity comes a more nuanced and complex reality for both buyers and sellers. It's a market that's
+        both cooling off from a boom and settling into a new, more sustainable normal.</p>
+    </article>
   </main>
 </body>
+
 </html>
