--- a/austin_articles/05_best_bars.html
+++ b/austin_articles/05_best_bars.html
@@ -6,8 +6,8 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description"
     content="A Guide to the Best Bars in Austin: From Craft Cocktails to Classic Dives - Minnow News">
@@ -84,20 +84,7 @@
   </noscript>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -120,7 +107,9 @@
     data-credentials="include"></amp-analytics>
 
   <header class="header">
-    <a href="../index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="../index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="../index.html">Home</a>
       <a href="../about.html">About</a>
@@ -130,37 +119,69 @@
   </header>
   <main>
     <article>
-<h2>A Guide to the Best Bars in Austin: From Craft Cocktails to Classic Dives</h2>
-<amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
-<p>Austin's bar scene is as diverse and vibrant as its music scene. Whether you're looking for a meticulously crafted cocktail, a cheap beer in a beloved dive, or a sunny patio to enjoy a local brew, the city has a spot for you. Here is a curated guide to some of the best bars Austin has to offer, broken down by category.</p>
-<h2>For the Cocktail Connoisseur</h2>
-<ol>
-<li><strong>The Roosevelt Room:</strong> This is where you go for a serious cocktail. The Roosevelt Room boasts a massive, encyclopedic menu that charts the history of cocktails from the 1600s to the present day. The bartenders are true experts, and the atmosphere is upscale, dimly lit, and perfect for a sophisticated night out.</li>
-<li><strong>Whistler's:</strong> Located in a historic East Austin building, Whistler's offers a multi-level experience. The downstairs bar is a lively, rustic-chic space with creative cocktails, while the upstairs is home to a more intimate mezcaleria. The sprawling patio is a huge draw, making it a perfect spot for a group.</li>
-<li><strong>Small Victory:</strong> Tucked away in a downtown parking garage, Small Victory is a hidden gem. This cozy, speakeasy-style bar is known for its perfectly executed classic cocktails and intimate, exclusive atmosphere. It's a small space, so it's best for a date or a quiet drink with a close friend.</li>
-</ol>
-<h2>For the Love of the Dive</h2>
-<ol>
-<li><strong>Deep Eddy Cabaret:</strong> Open since 1951, Deep Eddy is a true Austin institution. It's a no-frills, cash-only dive bar where the beers are cold, the jukebox is classic, and the conversation is friendly. It's a slice of old Austin that has resisted change.</li>
-<li><strong>Lala's Little Nugget:</strong> At Lala's, it's Christmas all year long. This beloved North Austin dive has been decorated for the holidays since the 1970s. With its festive decor, cheap drinks, and friendly regulars, it's one of the most unique and charmingly quirky bars in the city.</li>
-<li><strong>Ego's:</strong> If you love karaoke, you'll love Ego's. This classic karaoke dive, hidden under an office building on South Congress, is a rite of passage for many Austinites. The drinks are strong, the songbook is deep, and the crowd is always enthusiastic.</li>
-</ol>
-<h2>For the Wine Lover</h2>
-<ol>
-<li><strong>LoLo Natural Wine Bar:</strong> As the natural wine movement has grown, LoLo has become one of its most popular hubs in Austin. This trendy East Austin bar and bottle shop features a rotating list of low-intervention wines from around the world in a fun, casual, and often packed setting.</li>
-<li><strong>APT 115:</strong> For a more intimate wine experience, APT 115 is the perfect spot. This cozy, vintage-inspired wine bar feels like you're having a drink in a friend's stylish apartment. The curated list is excellent, and the knowledgeable staff can guide you to the perfect glass.</li>
-</ol>
-<h2>For the Beer Enthusiast</h2>
-<ol>
-<li><strong>Austin Beer Garden Brewing Co. (ABGB):</strong> The ABGB is a quintessential Austin beer garden. With a huge, shaded outdoor space, award-winning lagers, delicious pizza, and a stage for live music, it's a perfect spot for a sunny afternoon. It's family-friendly, dog-friendly, and always welcoming.</li>
-<li><strong>Cosmic Coffee + Beer Garden:</strong> Cosmic is more than just a beer garden; it's a sprawling oasis. It seamlessly blends a specialty coffee shop with a craft beer bar and cocktail program. Add in multiple excellent food trucks and a beautifully landscaped garden with a water feature, and you have one of the most unique and popular spots in South Austin.</li>
-<li><strong>Easy Tiger:</strong> With multiple locations, Easy Tiger has perfected the beer garden formula. They are famous for their house-baked bread, pastries, and pretzels, which pair perfectly with their large and well-curated selection of local and regional craft beers. The vibe is relaxed and communal.</li>
-</ol>
-<h2>For the Patio Life</h2>
-<ol>
-<li><strong>Lustre Pearl:</strong> The original Lustre Pearl on Rainey Street is gone, but its spirit lives on at its larger East Austin location. Lustre Pearl is the quintessential Austin patio bar, with a huge, dog-friendly backyard, ping pong tables, and a relaxed, unpretentious vibe. It's the perfect place to gather with a big group of friends for a day of drinking in the sun.</li>
-</ol>
-</article>
+      <h2>A Guide to the Best Bars in Austin: From Craft Cocktails to Classic Dives</h2>
+      <amp-img src="../assets/austin.webp" alt="Austin" class="article-image" width="1024" height="683"
+        layout="responsive"></amp-img>
+      <p>Austin's bar scene is as diverse and vibrant as its music scene. Whether you're looking for a meticulously
+        crafted cocktail, a cheap beer in a beloved dive, or a sunny patio to enjoy a local brew, the city has a spot
+        for you. Here is a curated guide to some of the best bars Austin has to offer, broken down by category.</p>
+      <h2>For the Cocktail Connoisseur</h2>
+      <ol>
+        <li><strong>The Roosevelt Room:</strong> This is where you go for a serious cocktail. The Roosevelt Room boasts
+          a massive, encyclopedic menu that charts the history of cocktails from the 1600s to the present day. The
+          bartenders are true experts, and the atmosphere is upscale, dimly lit, and perfect for a sophisticated night
+          out.</li>
+        <li><strong>Whistler's:</strong> Located in a historic East Austin building, Whistler's offers a multi-level
+          experience. The downstairs bar is a lively, rustic-chic space with creative cocktails, while the upstairs is
+          home to a more intimate mezcaleria. The sprawling patio is a huge draw, making it a perfect spot for a group.
+        </li>
+        <li><strong>Small Victory:</strong> Tucked away in a downtown parking garage, Small Victory is a hidden gem.
+          This cozy, speakeasy-style bar is known for its perfectly executed classic cocktails and intimate, exclusive
+          atmosphere. It's a small space, so it's best for a date or a quiet drink with a close friend.</li>
+      </ol>
+      <h2>For the Love of the Dive</h2>
+      <ol>
+        <li><strong>Deep Eddy Cabaret:</strong> Open since 1951, Deep Eddy is a true Austin institution. It's a
+          no-frills, cash-only dive bar where the beers are cold, the jukebox is classic, and the conversation is
+          friendly. It's a slice of old Austin that has resisted change.</li>
+        <li><strong>Lala's Little Nugget:</strong> At Lala's, it's Christmas all year long. This beloved North Austin
+          dive has been decorated for the holidays since the 1970s. With its festive decor, cheap drinks, and friendly
+          regulars, it's one of the most unique and charmingly quirky bars in the city.</li>
+        <li><strong>Ego's:</strong> If you love karaoke, you'll love Ego's. This classic karaoke dive, hidden under an
+          office building on South Congress, is a rite of passage for many Austinites. The drinks are strong, the
+          songbook is deep, and the crowd is always enthusiastic.</li>
+      </ol>
+      <h2>For the Wine Lover</h2>
+      <ol>
+        <li><strong>LoLo Natural Wine Bar:</strong> As the natural wine movement has grown, LoLo has become one of its
+          most popular hubs in Austin. This trendy East Austin bar and bottle shop features a rotating list of
+          low-intervention wines from around the world in a fun, casual, and often packed setting.</li>
+        <li><strong>APT 115:</strong> For a more intimate wine experience, APT 115 is the perfect spot. This cozy,
+          vintage-inspired wine bar feels like you're having a drink in a friend's stylish apartment. The curated list
+          is excellent, and the knowledgeable staff can guide you to the perfect glass.</li>
+      </ol>
+      <h2>For the Beer Enthusiast</h2>
+      <ol>
+        <li><strong>Austin Beer Garden Brewing Co. (ABGB):</strong> The ABGB is a quintessential Austin beer garden.
+          With a huge, shaded outdoor space, award-winning lagers, delicious pizza, and a stage for live music, it's a
+          perfect spot for a sunny afternoon. It's family-friendly, dog-friendly, and always welcoming.</li>
+        <li><strong>Cosmic Coffee + Beer Garden:</strong> Cosmic is more than just a beer garden; it's a sprawling
+          oasis. It seamlessly blends a specialty coffee shop with a craft beer bar and cocktail program. Add in
+          multiple excellent food trucks and a beautifully landscaped garden with a water feature, and you have one of
+          the most unique and popular spots in South Austin.</li>
+        <li><strong>Easy Tiger:</strong> With multiple locations, Easy Tiger has perfected the beer garden formula. They
+          are famous for their house-baked bread, pastries, and pretzels, which pair perfectly with their large and
+          well-curated selection of local and regional craft beers. The vibe is relaxed and communal.</li>
+      </ol>
+      <h2>For the Patio Life</h2>
+      <ol>
+        <li><strong>Lustre Pearl:</strong> The original Lustre Pearl on Rainey Street is gone, but its spirit lives on
+          at its larger East Austin location. Lustre Pearl is the quintessential Austin patio bar, with a huge,
+          dog-friendly backyard, ping pong tables, and a relaxed, unpretentious vibe. It's the perfect place to gather
+          with a big group of friends for a day of drinking in the sun.</li>
+      </ol>
+    </article>
   </main>
 </body>
+
 </html>
