--- a/coachella-article.html
+++ b/coachella-article.html
@@ -6,11 +6,10 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="Coachella 2026 Lineup Announced! - Minnow News">
+  <meta name="description" content="Coachella 2026 Lineup Announced! - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/coachella-article.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -90,6 +89,7 @@
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -97,8 +97,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -106,9 +107,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -116,78 +119,76 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
-        margin-top: 2rem;
-        border-left: 4px solid #1877f2;
-        padding-left: 1rem;
+      color: #333;
+      margin-top: 2rem;
+      border-left: 4px solid #1877f2;
+      padding-left: 1rem;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     .lineup-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 1rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
     }
+
     .lineup-grid div {
-        background-color: #fafafa;
-        padding: 1rem;
-        border-radius: 5px;
-        border: 1px solid #ddd;
+      background-color: #fafafa;
+      padding: 1rem;
+      border-radius: 5px;
+      border: 1px solid #ddd;
     }
+
     .lineup-grid h4 {
-        margin-top: 0;
-        color: #0053B3;
+      margin-top: 0;
+      color: #0053B3;
     }
   </style>
 </head>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -209,7 +210,9 @@
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
   <header class="header">
-    <a href="index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -219,23 +222,48 @@
   </header>
   <main>
     <article>
-        <h2>The Wait is Over: Coachella Unveils Stacked 2026 Lineup</h2>
+      <h2>The Wait is Over: Coachella Unveils Stacked 2026 Lineup</h2>
 
-        <p>Music fans, get ready to return to the desert! The official lineup for the 2026 Coachella Valley Music and Arts Festival has just dropped, and it's a spectacular blend of global superstars, indie favorites, and exciting newcomers. This year's festival promises a diverse and unforgettable experience with headliners Sabrina Carpenter, Justin Bieber, and Karol G.</p>
+      <p>Music fans, get ready to return to the desert! The official lineup for the 2026 Coachella Valley Music and Arts
+        Festival has just dropped, and it's a spectacular blend of global superstars, indie favorites, and exciting
+        newcomers. This year's festival promises a diverse and unforgettable experience with headliners Sabrina
+        Carpenter, Justin Bieber, and Karol G.</p>
 
-        <amp-img src="assets/Justin_Bieber_in_2015 (1).webp" alt="Coachella festival grounds" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
+      <amp-img src="assets/Justin_Bieber_in_2015 (1).webp" alt="Coachella festival grounds" class="article-image"
+        width="1024" height="683" layout="responsive"></amp-img>
 
-        <h3>Friday: Sabrina Carpenter, The xx, and Electronic Beats</h3>
-        <p>Kicking off the festival on Friday is pop sensation <strong>Sabrina Carpenter</strong>. She's joined by the iconic English indie rock band <strong>The xx</strong> and the infectious electronic beats of <strong>Disclosure</strong>. The first day also features a powerful and eclectic undercard, including the ethereal sounds of <strong>Ethel Cain</strong>, R&B artist <strong>Dijon</strong>, and the soulful <strong>Teddy Swims</strong>. Fans of classic new wave will be thrilled to see <strong>Devo</strong> on the lineup, while rap and pop are well-represented by <strong>Sexyy Red</strong>, <strong>Central Cee</strong>, and <strong>Foster the People</strong>.</p>
+      <h3>Friday: Sabrina Carpenter, The xx, and Electronic Beats</h3>
+      <p>Kicking off the festival on Friday is pop sensation <strong>Sabrina Carpenter</strong>. She's joined by the
+        iconic English indie rock band <strong>The xx</strong> and the infectious electronic beats of
+        <strong>Disclosure</strong>. The first day also features a powerful and eclectic undercard, including the
+        ethereal sounds of <strong>Ethel Cain</strong>, R&B artist <strong>Dijon</strong>, and the soulful <strong>Teddy
+          Swims</strong>. Fans of classic new wave will be thrilled to see <strong>Devo</strong> on the lineup, while
+        rap and pop are well-represented by <strong>Sexyy Red</strong>, <strong>Central Cee</strong>, and <strong>Foster
+          the People</strong>.
+      </p>
 
-        <h3>Saturday: Justin Bieber, The Strokes, and a Supergroup Debut</h3>
-        <p>Saturday is set to be a massive day with global superstar <strong>Justin Bieber</strong> taking the headlining spot. The day also features the legendary New York rock band <strong>The Strokes</strong> and the highly anticipated debut of <strong>Nine Inch Noize</strong>, a supergroup collaboration between industrial rock pioneers Nine Inch Nails and electronic producer Boys Noize. The lineup continues with R&B star <strong>GIVĒON</strong>, social media personality turned pop artist <strong>Addison Rae</strong>, and the experimental sounds of <strong>Labrinth</strong> and <strong>David Byrne</strong>.</p>
+      <h3>Saturday: Justin Bieber, The Strokes, and a Supergroup Debut</h3>
+      <p>Saturday is set to be a massive day with global superstar <strong>Justin Bieber</strong> taking the headlining
+        spot. The day also features the legendary New York rock band <strong>The Strokes</strong> and the highly
+        anticipated debut of <strong>Nine Inch Noize</strong>, a supergroup collaboration between industrial rock
+        pioneers Nine Inch Nails and electronic producer Boys Noize. The lineup continues with R&B star
+        <strong>GIVĒON</strong>, social media personality turned pop artist <strong>Addison Rae</strong>, and the
+        experimental sounds of <strong>Labrinth</strong> and <strong>David Byrne</strong>.
+      </p>
 
-        <h3>Sunday: Karol G, Young Thug, and Dance Music Legends</h3>
-        <p>Closing out the festival on Sunday is Colombian reggaeton queen <strong>Karol G</strong>. The final day is packed with heavy hitters, including rapper <strong>Young Thug</strong> and K-Pop legends <strong>BIGBANG</strong>. The dance music vibes are strong with sets from mainstage progressive house artist <strong>Anyma</strong>, the legendary <strong>Kaskade</strong>, and powerhouse trio <strong>Major Lazer</strong>. Punk icon <strong>Iggy Pop</strong> will bring his raw energy, alongside the avant-garde pop of <strong>FKA twigs</strong> and the critically acclaimed indie rock of <strong>Wet Leg</strong>.</p>
+      <h3>Sunday: Karol G, Young Thug, and Dance Music Legends</h3>
+      <p>Closing out the festival on Sunday is Colombian reggaeton queen <strong>Karol G</strong>. The final day is
+        packed with heavy hitters, including rapper <strong>Young Thug</strong> and K-Pop legends
+        <strong>BIGBANG</strong>. The dance music vibes are strong with sets from mainstage progressive house artist
+        <strong>Anyma</strong>, the legendary <strong>Kaskade</strong>, and powerhouse trio <strong>Major
+          Lazer</strong>. Punk icon <strong>Iggy Pop</strong> will bring his raw energy, alongside the avant-garde pop
+        of <strong>FKA twigs</strong> and the critically acclaimed indie rock of <strong>Wet Leg</strong>.
+      </p>
 
-        <h3>A Festival for Everyone</h3>
-        <p>Once again, Coachella has delivered a lineup that spans genres and generations. From pop and rock to hip-hop, electronic, and global music, there's something for every music lover. Get ready for another incredible year in the desert. See you there!</p>
+      <h3>A Festival for Everyone</h3>
+      <p>Once again, Coachella has delivered a lineup that spans genres and generations. From pop and rock to hip-hop,
+        electronic, and global music, there's something for every music lover. Get ready for another incredible year in
+        the desert. See you there!</p>
     </article>
   </main>
 </body>
