--- a/nyfw-article.html
+++ b/nyfw-article.html
@@ -6,12 +6,11 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+
   <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="NYFW Spring/Summer 2026: The Biggest Moments and Trends - Minnow News">
+  <meta name="description" content="NYFW Spring/Summer 2026: The Biggest Moments and Trends - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/nyfw-article.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -91,6 +90,7 @@
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -98,8 +98,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -107,9 +108,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -117,69 +120,65 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
-        margin-top: 2rem;
-        border-left: 4px solid #1877f2;
-        padding-left: 1rem;
+      color: #333;
+      margin-top: 2rem;
+      border-left: 4px solid #1877f2;
+      padding-left: 1rem;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     .tiktok-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem 0;
     }
   </style>
 </head>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -201,7 +200,9 @@
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
   <header class="header">
-    <a href="index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -211,29 +212,49 @@
   </header>
   <main>
     <article>
-        <h2>The Future of Fashion: The Biggest Trends from NYFW Spring/Summer 2026</h2>
+      <h2>The Future of Fashion: The Biggest Trends from NYFW Spring/Summer 2026</h2>
 
-        <p>New York Fashion Week has once again set the stage for the future of style, and the Spring/Summer 2026 collections did not disappoint. From bold reinterpretations of classic silhouettes to a renewed focus on sustainable and innovative materials, this season was all about playful contrasts and thoughtful design. Here’s a look at the biggest moments and trends that will be defining our wardrobes next year.</p>
+      <p>New York Fashion Week has once again set the stage for the future of style, and the Spring/Summer 2026
+        collections did not disappoint. From bold reinterpretations of classic silhouettes to a renewed focus on
+        sustainable and innovative materials, this season was all about playful contrasts and thoughtful design. Here’s
+        a look at the biggest moments and trends that will be defining our wardrobes next year.</p>
 
-        <div class="tiktok-container">
-          <amp-tiktok width="325" height="575" data-src="7551552416945163575"></amp-tiktok>
-        </div>
+      <div class="tiktok-container">
+        <amp-tiktok width="325" height="575" data-src="7551552416945163575"></amp-tiktok>
+      </div>
 
-        <h3>Trend 1: The New Prep</h3>
-        <p>Preppy aesthetics are back, but not as you know them. Designers like Tommy Hilfiger and Carolina Herrera showcased collections that deconstructed the traditional preppy look. Think classic cable-knit sweaters reimagined with asymmetrical cuts, polo shirts adorned with unexpected embellishments, and varsity jackets crafted from luxurious, flowing fabrics. The look is less about Ivy League conformity and more about a playful, ironic take on American classics.</p>
+      <h3>Trend 1: The New Prep</h3>
+      <p>Preppy aesthetics are back, but not as you know them. Designers like Tommy Hilfiger and Carolina Herrera
+        showcased collections that deconstructed the traditional preppy look. Think classic cable-knit sweaters
+        reimagined with asymmetrical cuts, polo shirts adorned with unexpected embellishments, and varsity jackets
+        crafted from luxurious, flowing fabrics. The look is less about Ivy League conformity and more about a playful,
+        ironic take on American classics.</p>
 
-        <h3>Trend 2: Sheer Everything</h3>
-        <p>Transparency was a major theme on the SS26 runways. Sheer fabrics like organza, chiffon, and mesh were used in everything from delicate blouses and flowing dresses to daring outerwear. Designers played with layering, using sheer pieces to both conceal and reveal, creating looks that were ethereal, romantic, and subtly seductive. This trend speaks to a broader movement towards vulnerability and authenticity in fashion.</p>
+      <h3>Trend 2: Sheer Everything</h3>
+      <p>Transparency was a major theme on the SS26 runways. Sheer fabrics like organza, chiffon, and mesh were used in
+        everything from delicate blouses and flowing dresses to daring outerwear. Designers played with layering, using
+        sheer pieces to both conceal and reveal, creating looks that were ethereal, romantic, and subtly seductive. This
+        trend speaks to a broader movement towards vulnerability and authenticity in fashion.</p>
 
-        <h3>Trend 3: Utility and Functionality</h3>
-        <p>On the other end of the spectrum, utilitarian and functional design had a strong presence. Cargo pants, multi-pocketed vests, and oversized jackets were seen in numerous collections. However, these pieces were elevated with high-end materials and sophisticated tailoring. The message is clear: modern fashion needs to be both beautiful and practical, ready to move with us through our busy lives.</p>
+      <h3>Trend 3: Utility and Functionality</h3>
+      <p>On the other end of the spectrum, utilitarian and functional design had a strong presence. Cargo pants,
+        multi-pocketed vests, and oversized jackets were seen in numerous collections. However, these pieces were
+        elevated with high-end materials and sophisticated tailoring. The message is clear: modern fashion needs to be
+        both beautiful and practical, ready to move with us through our busy lives.</p>
 
-        <h3>Standout Moments</h3>
-        <p>Several shows generated significant buzz. The return of a major designer to the calendar created a wave of excitement, with a collection that paid homage to the brand's iconic archives while pushing it in a bold new direction. Another highlight was a young, emerging designer whose collection, inspired by marine life, featured breathtaking sculptural pieces crafted from recycled plastics and other sustainable materials.</p>
+      <h3>Standout Moments</h3>
+      <p>Several shows generated significant buzz. The return of a major designer to the calendar created a wave of
+        excitement, with a collection that paid homage to the brand's iconic archives while pushing it in a bold new
+        direction. Another highlight was a young, emerging designer whose collection, inspired by marine life, featured
+        breathtaking sculptural pieces crafted from recycled plastics and other sustainable materials.</p>
 
-        <p>Celebrity sightings were, as always, a huge part of the spectacle. A-listers packed the front rows, and several top models made triumphant returns to the runway. The fusion of fashion, music, and film was palpable, reminding us that NYFW is about more than just clothes; it's a celebration of culture.</p>
+      <p>Celebrity sightings were, as always, a huge part of the spectacle. A-listers packed the front rows, and several
+        top models made triumphant returns to the runway. The fusion of fashion, music, and film was palpable, reminding
+        us that NYFW is about more than just clothes; it's a celebration of culture.</p>
 
-        <p>As the fashion world turns its eyes to London, Milan, and Paris, New York has left us with a vision of a future that is optimistic, versatile, and thoughtfully designed. The trends from SS26 are all about personal expression, blending timeless style with a modern, practical edge.</p>
+      <p>As the fashion world turns its eyes to London, Milan, and Paris, New York has left us with a vision of a future
+        that is optimistic, versatile, and thoughtfully designed. The trends from SS26 are all about personal
+        expression, blending timeless style with a modern, practical edge.</p>
     </article>
   </main>
 </body>
