--- a/zen-swing-article.html
+++ b/zen-swing-article.html
@@ -6,12 +6,11 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+
   <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="The Art of the Zen Swing: A Simple Movement for Health and Flow - Minnow News">
+  <meta name="description" content="The Art of the Zen Swing: A Simple Movement for Health and Flow - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/zen-swing-article.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -91,6 +90,7 @@
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -98,8 +98,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -107,9 +108,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -117,73 +120,71 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
-        margin-top: 2rem;
+      color: #333;
+      margin-top: 2rem;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     .instructions ol {
-        padding-left: 20px;
+      padding-left: 20px;
     }
+
     .instructions li {
-        margin-bottom: 1rem;
+      margin-bottom: 1rem;
     }
-        .tiktok-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem 0;
+
+    .tiktok-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem 0;
     }
   </style>
 </head>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -205,7 +206,9 @@
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
   <header class="header">
-    <a href="index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -215,41 +218,65 @@
   </header>
   <main>
     <article>
-        <h2>Finding Focus and Flow: The Simple Power of the Zen Swing</h2>
+      <h2>Finding Focus and Flow: The Simple Power of the Zen Swing</h2>
 
-        <p>In our fast-paced world, finding moments of calm and clarity can feel like a monumental task. Yet, one of the most effective techniques for achieving a state of relaxed focus comes from the ancient Chinese practice of Qigong. It’s called the "Zen Swing," and its beauty lies in its profound simplicity.</p>
+      <p>In our fast-paced world, finding moments of calm and clarity can feel like a monumental task. Yet, one of the
+        most effective techniques for achieving a state of relaxed focus comes from the ancient Chinese practice of
+        Qigong. It’s called the "Zen Swing," and its beauty lies in its profound simplicity.</p>
 
-             <div class="tiktok-container">
-          <amp-tiktok width="325" height="575" data-src="https://www.tiktok.com/@calebcomplains/video/7529168975045971214"></amp-tiktok>
-        </div>
+      <div class="tiktok-container">
+        <amp-tiktok width="325" height="575"
+          data-src="https://www.tiktok.com/@calebcomplains/video/7529168975045971214"></amp-tiktok>
+      </div>
 
-        <h3>What is the Zen Swing?</h3>
-        <p>The Zen Swing, also known as "Shaking the Tree" or simply "Spinal Cord Breathing," is a foundational Qigong exercise. It’s a form of moving meditation that involves a gentle, rhythmic twisting of the torso, allowing the arms to swing freely. The goal is to release tension, stimulate the body's internal energy (Qi), and calm the mind through repetitive, fluid motion.</p>
+      <h3>What is the Zen Swing?</h3>
+      <p>The Zen Swing, also known as "Shaking the Tree" or simply "Spinal Cord Breathing," is a foundational Qigong
+        exercise. It’s a form of moving meditation that involves a gentle, rhythmic twisting of the torso, allowing the
+        arms to swing freely. The goal is to release tension, stimulate the body's internal energy (Qi), and calm the
+        mind through repetitive, fluid motion.</p>
 
-        <h3>How to Perform the Zen Swing: A Step-by-Step Guide</h3>
-        <p>Anyone can do the Zen Swing. It requires no special equipment and can be done in just a few minutes. Here’s how to get started:</p>
-        <div class="instructions">
-            <ol>
-                <li><strong>Find Your Stance:</strong> Stand with your feet shoulder-width apart, with your toes pointing forward. Soften your knees so they are slightly bent and not locked. Keep your spine straight but relaxed.</li>
-                <li><strong>Relax Your Arms:</strong> Let your arms hang loosely at your sides like heavy ropes. The key to this exercise is to let go of all tension in your shoulders, elbows, and wrists.</li>
-                <li><strong>Initiate the Twist:</strong> Begin to gently rotate your torso from your hips and waist. Turn to the left, then to the right, in a smooth, continuous motion. The movement should be generated from your core, not your arms.</li>
-                <li><strong>Let Your Arms Follow:</strong> As you twist, allow your arms to swing freely. They will naturally wrap around your body. One arm will tap against your lower back, while the other taps against your abdomen. Let momentum do all the work.</li>
-                <li><strong>Breathe and Flow:</strong> Coordinate your breath with the movement. Inhale as you twist to one side, and exhale as you twist to the other. Find a comfortable rhythm and continue for 3-5 minutes. Allow your mind to focus solely on the sensation of the movement and your breath.</li>
-            </ol>
-        </div>
+      <h3>How to Perform the Zen Swing: A Step-by-Step Guide</h3>
+      <p>Anyone can do the Zen Swing. It requires no special equipment and can be done in just a few minutes. Here’s how
+        to get started:</p>
+      <div class="instructions">
+        <ol>
+          <li><strong>Find Your Stance:</strong> Stand with your feet shoulder-width apart, with your toes pointing
+            forward. Soften your knees so they are slightly bent and not locked. Keep your spine straight but relaxed.
+          </li>
+          <li><strong>Relax Your Arms:</strong> Let your arms hang loosely at your sides like heavy ropes. The key to
+            this exercise is to let go of all tension in your shoulders, elbows, and wrists.</li>
+          <li><strong>Initiate the Twist:</strong> Begin to gently rotate your torso from your hips and waist. Turn to
+            the left, then to the right, in a smooth, continuous motion. The movement should be generated from your
+            core, not your arms.</li>
+          <li><strong>Let Your Arms Follow:</strong> As you twist, allow your arms to swing freely. They will naturally
+            wrap around your body. One arm will tap against your lower back, while the other taps against your abdomen.
+            Let momentum do all the work.</li>
+          <li><strong>Breathe and Flow:</strong> Coordinate your breath with the movement. Inhale as you twist to one
+            side, and exhale as you twist to the other. Find a comfortable rhythm and continue for 3-5 minutes. Allow
+            your mind to focus solely on the sensation of the movement and your breath.</li>
+        </ol>
+      </div>
 
-        <amp-img src="assets/zen2.webp" alt="A serene image representing zen and balance" class="article-image" width="885" height="888" layout="responsive"></amp-img>
+      <amp-img src="assets/zen2.webp" alt="A serene image representing zen and balance" class="article-image"
+        width="885" height="888" layout="responsive"></amp-img>
 
-        <h3>The Surprising Health Benefits</h3>
-        <p>While it may look simple, the Zen Swing has a wide range of benefits for both physical and mental well-being:</p>
-        <ul>
-            <li><strong>Stress Reduction:</strong> The rhythmic, meditative motion calms the nervous system and helps to release stored tension in the shoulders, neck, and back.</li>
-            <li><strong>Improved Digestion:</strong> The gentle twisting massages the internal organs, which can stimulate digestion and improve bowel function.</li>
-            <li><strong>Enhanced Circulation:</strong> The movement encourages the flow of blood and lymphatic fluid throughout the body, helping to remove toxins and boost energy levels.</li>
-            <li><strong>Increased Flexibility:</strong> The exercise gently mobilizes the spine and hips, improving flexibility and range of motion.</li>
-        </ul>
+      <h3>The Surprising Health Benefits</h3>
+      <p>While it may look simple, the Zen Swing has a wide range of benefits for both physical and mental well-being:
+      </p>
+      <ul>
+        <li><strong>Stress Reduction:</strong> The rhythmic, meditative motion calms the nervous system and helps to
+          release stored tension in the shoulders, neck, and back.</li>
+        <li><strong>Improved Digestion:</strong> The gentle twisting massages the internal organs, which can stimulate
+          digestion and improve bowel function.</li>
+        <li><strong>Enhanced Circulation:</strong> The movement encourages the flow of blood and lymphatic fluid
+          throughout the body, helping to remove toxins and boost energy levels.</li>
+        <li><strong>Increased Flexibility:</strong> The exercise gently mobilizes the spine and hips, improving
+          flexibility and range of motion.</li>
+      </ul>
 
-        <p>The Zen Swing is a powerful reminder that we don't always need intense, complicated workouts to improve our health. Sometimes, the most profound benefits come from the simplest, most gentle movements. Give it a try and find your flow.</p>
+      <p>The Zen Swing is a powerful reminder that we don't always need intense, complicated workouts to improve our
+        health. Sometimes, the most profound benefits come from the simplest, most gentle movements. Give it a try and
+        find your flow.</p>
     </article>
   </main>
 </body>
